# EnvVerifier

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  README.md  install.sh  mkdocs.yml  pyproject.toml
.github/workflows/: cpu_tests.yml
agent-world-model/: CLAUDE.md  README.md  pyproject.toml
agent-world-model/awm/: cli.py  gpt.py  prompts.py  tools.py
agent-world-model/awm/core/: agent.py  check.py  db.py  env.py  pipeline.py  reset.py  sample.py  scenario.py  server.py  spec.py  (+4 more)
agent-world-model/extract/: gen_db.jsonl  gen_envs.jsonl  gen_sample.jsonl  gen_verifier.pure_code.jsonl  scenarios.json
agent-world-model/scripts/: db_server.sh  db_test.sh  gen_db.sh  gen_env.sh  gen_sample.sh  gen_spec.sh  gen_verify.sh  scene_classify.sh  scene_extract.py  seed_extract.py  task.sh
docs/: README.md  index.md  requirements-docs.txt
docs/api_references/: index.md
docs/examples/: image_agent.md  index.md  index.rst  predefined_training_examples.md
docs/features/: agent_rollout.md  environments.md  index.md  reward_system.md  tool_for_class_method.md  tool_system.md
docs/start/: first_agent.md  first_tool_reward.md  first_training.md  installation.md
docs/stylesheets/: extra.css
examples/board_game/: chess_readme.md  prepare_chess_data.py  train_chess.sh
examples/docs/: test_cpu_runs.sh  test_gpu_runs.sh
examples/train_scripts/: convert_model_weights.sh  run_code_agent.sh  run_gui_agent.sh  run_react_agent.sh  run_react_agent_alfworld.sh  run_react_code_agent.sh  run_retrieval_agent.sh  run_science_world.slurm  run_vlm_qa.sh  run_webshop_agent.sh  run_webshop_agent.slurm  run_webshop_agent_swanlab_smoke.sh  test_thinking_agent.sh  train_example.sh
src/agentfly/: __init__.py  cli.py  requirements.txt  verl
tests/unit/: conftest.py
verl/: .gitignore
verl/verl/: __init__.py  protocol.py
(+431 files in other folders)
