[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
    "gpu: marks tests as requiring GPU resources"
]

[tool.setuptools]
packages = ["agentfly"]
package-dir = {"" = "src"}

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["agentfly"]
skip_glob = ["*/verl/*"]

[tool.ruff.lint]
# Disable import checking - let isort handle it
ignore = ["I"]


[project]
name = "AgentFly"
version = "0.1.0"
description = "Agent reinforcement learning framework."
readme = "README.md"
requires-python = ">=3.12,<3.13" # Python 3.12.x
license = { text = "Apache-2.0" }

dependencies = [
    "multiprocess",
    "requests",
    "PyYAML",
    "timeout-decorator",
    "redis",
    "docker",
    "openai",
    "faiss-cpu",
    "vllm==0.10.0",
    "termcolor",
    "tenacity",
    "bs4",
    "qwen_vl_utils",
    "onnxruntime",
    "mpmath",
    "wandb",
    "chat-bricks",
    "diffusers",
    "google-genai",
    "chess",
]

[project.optional-dependencies]
verl = [
    "accelerate",
    "codetiming",
    "datasets",
    "dill",
    "flash-attn",
    "hydra-core",
    "liger-kernel",
    "numpy",
    "pandas",
    "peft",
    "pyarrow>=15.0.0",
    "pybind11",
    "pylatexenc",
    "pre-commit",
    "ray[default]",
    "tensordict",
    "torchdata",
    "transformers<5.0.0",
    "packaging>=20.0",
    "uvicorn",
    "fastapi"
]
dev = [
    "pytest",
    "nest-asyncio",
    "pytest-asyncio",
    "pre-commit",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "pymdown-extensions",
    "mkdocs-document-dates",
    "mkdocs-link-preview-plugin",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-git-authors-plugin",
]
